crates/es-fluent-cli/tests/snapshots/cli_tests__package__check.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: run_check_test(&PACKAGE_CONFIG)
---
STDOUT:
Fluent FTL Checker
Discovered 1 crate(s)

STDERR:
Error: es_fluent::validate::report

  × validation found 1 error(s) and 0 warning(s)

Error: es_fluent::validate::missing_key

  × missing translation key
  help: Add translation for 'dictionary-Hello' in en/test-app-package.ftl
