crates/es-fluent-cli/tests/snapshots/cli_tests__package__clean_dry_run.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: run_clean_dry_run_test(&PACKAGE_CONFIG)
---
STDOUT:
Fluent FTL Generator
Discovered 1 crate(s)
Would write empty FTL file (no items): [TEMP_DIR]/i18n/en/test-app-package.ftl
- hello = Hello World


STDERR:
