crates/es-fluent-cli/tests/snapshots/cli_tests__package__clean_real.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: run_clean_real_test(&PACKAGE_CONFIG)
---
STDOUT:
Fluent FTL Generator
Discovered 1 crate(s)
test-app-package cleaned in [DURATION] (0 resources)

STDERR:
