crates/es-fluent-cli/tests/snapshots/cli_tests__package__fmt_dry_run.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: run_fmt_dry_run_test(&PACKAGE_CONFIG)
---
STDOUT:
Fluent FTL Formatter
Discovered 1 crate(s)
Done: 0 formatted, 1 unchanged

STDERR:
