crates/es-fluent-cli/tests/snapshots/cli_tests__package__generate_incremental-2.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: incremental
---
STDOUT:
Fluent FTL Generator
Discovered 1 crate(s)
test-app-package generated in [DURATION] (3 resources)

STDERR:
