crates/es-fluent-cli/tests/snapshots/cli_tests__package__generate_mode_aggressive.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: run_generate_mode_aggressive_test(&PACKAGE_CONFIG)
---
STDOUT:
Fluent FTL Generator
Discovered 1 crate(s)
Would update FTL file: [TEMP_DIR]/i18n/en/test-app-package.ftl
- hello = Hello World
+ ## Dictionary
+ 
+ dictionary-Hello = Hello


STDERR:
