crates/es-fluent-cli/tests/snapshots/cli_tests__package__generate_real.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: run_generate_real_test(&PACKAGE_CONFIG)
---
STDOUT:
Fluent FTL Generator
Discovered 1 crate(s)
test-app-package generated in [DURATION] (2 resources)

STDERR:
