crates/es-fluent-cli/tests/snapshots/cli_tests__package__sync_dry_run.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
assertion_line: 537
expression: run_sync_dry_run_test(&PACKAGE_CONFIG)
---
STDOUT:
Fluent FTL Sync

STDERR:
Locale not found: 'es'. Available locales: en, en-US
Error: es_fluent::config::locale_not_found

  × locale 'es' not found
  help: Available locales: en, en-US
